# xbridge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  README.md  config.example.yaml  docker-compose.yaml  gh-setup.yaml
.github/workflows/: ci.yml  release.yml
demo/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt  xbridge-local.yaml  xbridge.yaml
demo/examples/: telnyx-sip-trunk.yaml  twilio-sip-trunk.yaml
demo/sip-trunk/: README.md  docker-compose.yml  telnyx.yaml  twilio.yaml
demo/voice-ai/: README.md  docker-compose.yml  xbridge.yaml
demo/voice-app/: Dockerfile  app.py  requirements.txt
demo/voice-app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/voice-app/frontend/src/: App.tsx
demo/voice-app/frontend/src/components/: CallList.tsx  Conversation.tsx  Dashboard.tsx  EventLog.tsx  Setup.tsx
demo/xpbx-overrides/: extensions.conf  pjsip.conf  sorcery.conf
docs/: api-reference.md  guide.md  plan-trunk-host.md
src/: api.rs  audio.rs  bridge.rs  call.rs  call_control.rs  config.rs  lib.rs  main.rs  metrics.rs  router.rs  state.rs  wav.rs  webhook.rs  webhook_client.rs  ws.rs
src/trunk/: auth.rs  config.rs  dialog.rs  mod.rs  server.rs  sip_msg.rs  util.rs
tests/: integration.rs
