[package]
name = "xbridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "Self-hosted voice gateway — WebSocket audio streaming and REST call control. Drop-in Twilio replacement."
license = "MIT"
repository = "https://github.com/x-phone/xbridge"
homepage = "https://github.com/x-phone/xbridge"

[dependencies]
xphone = "0.3"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
futures-util = "0.3"
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }

[features]
default = []
tls = ["axum-server"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.28"
